--- a/Ch7 Hypothesis and Inference.ipynb
+++ b/Ch7 Hypothesis and Inference.ipynb
@@ -54,7 +54,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Our null hypothesis is that the coin is fair, p = 0.5, and we will test this against and alternative hypothesis p ≠ 0.5"
+    "* Our null hypothesis is that the coin is fair, p = 0.5, and we will test this against and alternative hypothesis p ≠ 0.5\n",
+    "    * $H_{0}$:  p = 0.5\n",
+    "    * $H_{1}$:  p ≠ 0.5 "
    ]
   },
   {
@@ -403,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Assuming *p* really equals 0.5(i.e. $H_{0}$ is true), there is just a 5% chance we observe an *X* that lies outside this interval(469 - 530), which is the exact significance we wanted. Said another way, if $H_{0}$ is true, then, approximately 19 times out of 20, this test will give the correct result. "
+    "* Assuming *p* really equals 0.5 (i.e. $H_{0}$ is true), there is just a 5% chance we observe an *X* that lies outside this interval(469 - 530), which is the exact significance we wanted. Said another way, if $H_{0}$ is true, then, approximately 19 times out of 20, this test will give the correct result. "
    ]
   },
   {
@@ -422,14 +424,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "469.01026640487555\n",
+      "530.9897335951244\n"
+     ]
+    }
+   ],
    "source": [
     "# 95% bounds based on assumption p is 0.5\n",
-    "lo, hi = normal_two_sided_bounds(0.95, mu_0, sigma_0)"
+    "lo, hi = normal_two_sided_bounds(0.95, mu_0, sigma_0)\n",
+    "print(lo)\n",
+    "print(hi)"
    ]
   },
   {
@@ -525,13 +538,297 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* This is a more powerful test, since it no longer rejects $H_{0}$ when *X* is below 469 (which is very unlikely to happen if $H_{1}$ is true). ===p-values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* An alternative way of thinking about the preceeding test involves *p-values*. Instead of choosing bounds based on some probability cutoff, we compute the probability -- assuming $H_{0}$ is true -- that we would see a value at least as extreme as the one we actually observed. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For our two-sided test of whether the coin is fair, we compute:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def two_sided_p_value(x, mu=0, sigma=1):\n",
+    "    if x >= mu:\n",
+    "        # if x is greater than the mean, the tail is what's greater than x\n",
+    "        return 2 * normal_probability_above(x, mu, sigma)\n",
+    "    else:\n",
+    "        #if x is less than the mean, the tail is what's less than x\n",
+    "        return 2 * normal_probability_below(x, mu, sigma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* If we were to see 530 heads, we would compute:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06207721579598857"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_sided_p_value(529.5, mu_0, sigma_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* So, this tells us that we have a 6% chance of seeing this value, and we would not reject the null hypothesis because it is over 5%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Why use 529.5 instead of 530? It's called continuity correction. It reflects the fact that normal_probability_between(529.5, 530.5, mu_0, sigma_0) is a better estimate of the probability of seeing 530 heads than normal_probability_between(530, 531, mu_0, sigma_0) is. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* One way to check that this is a reasonable estimate is with a simulation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "extreme_value_count = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for _ in range(100000):\n",
+    "    num_heads = sum(1 if random.random() < 0.5 else 0 #count number of heads in 1000 flips\n",
+    "                     for _ in range(1000))\n",
+    "    \n",
+    "    if num_heads >= 530 or num_heads <= 470:   #count how often the number is 'extreme'\n",
+    "        extreme_value_count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06162\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(extreme_value_count/100000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Since the p-value is greater than our 5% significance, we don't reject the null. If we instead saw 532 heads, the p-value would be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.046345287837786575"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_sided_p_value(531.5, mu_0, sigma_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Which is smaller than the 5% significance, which means we would reject the null. It's the exact same test as before. It's just a different way of approaching the statistics. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Similarly, we would have:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "upper_p_value = normal_probability_above\n",
+    "lower_p_value = normal_probability_below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For our one-sided test if we saw 525 heads we would compute:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06062885772582083"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "upper_p_value(524.5, mu_0, sigma_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Which means we wouldn't reject the null. If we saw 527 heads, the computation would be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04686839508859242"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "upper_p_value(526.5, mu_0, sigma_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Below 5% so we would reject the null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** * Before using normal_probability_above make sure your data is normally distributed, there are various statistical tests for normality, but even plotting the data is a good start**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Confidence Intervals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So far, we have been testing a hypothesis about the value of heads probability *p*, which is a *parameter* of the unknown \"heads\" distribution. When this is the case, there is another method we can use. We can construct a **confidence interval** around the observed value of the parameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For example, we can estimate the probability of the unfair coin by looking at the average value of the Bernoulli variables corresponding to each flip- 1 if heads, 0 if tails. If we observe 5"
+   ]
   }
  ],
  "metadata": {
