--- a/Ch7 Hypothesis and Inference.ipynb
+++ b/Ch7 Hypothesis and Inference.ipynb
@@ -2093,6 +2093,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One of the primary responsibilities at DataSciencester is experience optimization, which is a euphemism for trying to get people to click on advertisements. One of your advertisers has developed a new energy drink targeted at data scientists, and the VP of Advertisements wants your help choosing between advertisement A \"tastes great\" and advertisement B \"less bias!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Being a scientist, you decide to run an experiment by randomly showing site visitors one of the two advertisements and tracking how many people click on each one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is easy to see when it's a landslide, however if its a closer race statistical inference comes in to play."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Let's say that $N_{A}$ people see ad A, and that $n_{A}$ of them click it. We can think of each ad view as a Bernoulli trial where $p_{A}$ is the probability that someone clicks ad A. Then, if $N_{A}$ is large enough, we know that $\\frac{n_{A}}{N_{A}}$ is approximately a normal random variable with mean $p_{A}$ and a standard deviation $\\sigma_{A} = \\sqrt{\\frac{p_{A}(1 - p_{A})}{N_{A}}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Similarly, we can have $n_{B}/N_{B}$ , with the same mean and sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def estimated_parameters(N, n):\n",
+    "    p = n / N\n",
+    "    sigma = math.sqrt(p * (1 - p)/ N)\n",
+    "    return p, sigma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* If we assume those two normals are independent (which seems reasonable, since Bernoulli trials are),  then their difference should also be normal with mean $p_{B} - p_{A}$ and standard deviation $\\sqrt{\\sigma^2_{A} + \\sigma^2_{B}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\* This is kindof cheating, the math only works out if we know the standard deviations. Here we're estimating them from the data, which means that we really should be using a *t-distribution*. However, for large datasets, it's close enough"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Now we can test the null hypothesis that $p_{A}$ and $p_{B}$ are the same or that $p_{A}$ - $p_{B}$ is zero using this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def a_b_test_statistic(N_A, n_A, N_B, n_B):\n",
+    "    p_A, sigma_A =  estimated_parameters(N_A, n_A)\n",
+    "    p_B, sigma_B = estimated_parameters(N_B, n_B)\n",
+    "    \n",
+    "    return (p_B - p_A)/ math.sqrt(sigma_A **2 + sigma_B **2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which should be approximately standard normal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For example, if \"tastes great\" gets 200 clicks out of 1,000 views and \"less bias\" gets 180 clicks out of 1,000 views, the statistic equals:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.1403464899034472\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = a_b_test_statistic(1000,200,1000,180)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The probability of seeing such a large difference if the means were actually equal would be:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.254141976542236"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_sided_p_value(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A 25% chance of them being the same is large enought that you can't conclude there's much of a difference. On the other hand, if \"less bias\" only got 150 clicks, we'd have:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.003189699706216853"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = a_b_test_statistic(1000,200,1000,150)\n",
+    "two_sided_p_value(z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* which means there is only a .003 probability that you'd see suck a large difference if the ads were equally effective"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Bayesian Inference"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
