--- a/Ch7 Hypothesis and Inference.ipynb
+++ b/Ch7 Hypothesis and Inference.ipynb
@@ -2274,7 +2274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* which means there is only a .003 probability that you'd see suck a large difference if the ads were equally effective"
+    "* which means there is only a .003 probability that you'd see such a large difference if the ads were equally effective"
    ]
   },
   {
@@ -2282,6 +2282,138 @@
    "metadata": {},
    "source": [
     "###Bayesian Inference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The procedures we've looked at have involved making probability statements about our *tests*. An alternative approach to inference involves treating the unknown parameters themselves as random variables. The analyst starts with a *prior distribution* for the parameters and then uses the observed data and Bayes's Theorem to get an updated *posterior distribution* for the parameters. Rather than making probability judgments about the tests, you make probability judgements about the parameters themselves. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For example, when the unknown parameter is a probability(as in the coin flipping example), we often use a prior from the *Beta distribution*, which puts all its probability between 0 and 1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def B(alpha, beta):\n",
+    "    \"\"\"a normalizing constant so that the total probability is 1\"\"\"\n",
+    "    return math.gamma(alpha) * math.gamma(beta) / math.gamma(alpha + beta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def beta_pdf(x, alpha, beta):\n",
+    "    if x < 0 or x > 1:     #no wieght outside of [0,1]\n",
+    "        return 0\n",
+    "    return x ** (alpha - 1) * (1 - x) ** (beta - 1)/ B(alpha, beta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Generally speaking, this distributin centers its weight at:\n",
+    "    $$ \\frac{alpha}{alpha + beta} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The larger alpha and beta are, the tighter the distribution is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For example, if alpha and beta are both 1, it's just the uniform distribution (centered at 0.5, straight line). If alpha is much larger than beta, most of the weight is near 1. If alpha is smaller than beta, most of the weight is near zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* So let's say we assume a prior distribution on *p*. Maybe we don't want to take a stand on whether the coin is fair, and we choose alpha and beta to both equal 1. Or maybe we have a strong belief that it lands heads 55% of the time, and we choose alpha equals 55, beta equals 45."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Then we flip our coin a bunch of times and see *h* heads and *t* tails. Bayes's Theorem, tells us that the posterior distribution for *p* is again a Beta destribution but with parameter alpha + h  and beta + t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\* It's no coincidence that the posterior distribution was again a Beta distribution. The number of heads is given by a Binomial distribution and the Beta is the *conjugate prior* to the Binomial distribution. This means that whenever you update a Beta prior using observations from the corresponding binomial, you will get back a Beta posterior. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Let's say you flip a coin 10 times and see only 3 heads:\n",
+    "\n",
+    "    * If you started with the uniform prior (basically refusing to take a stand about the coin's fairness), your posterior distribution would be Beta(4, 8), centered around 0.33. Since you considered all probabilities equally likely, your best guess is something pretty close to the observed probability. \n",
+    "\n",
+    "    * If you started with Beta(20, 20) (expressing the belief that the coin was roughly fair), your posterior distribution would be Beta(23,27), centered around 0.46, indicating a revised belief that maybe the coin is slightly biased towards tails. \n",
+    "\n",
+    "    * And if you started with a Beta(30, 10) (expressing the belief that the coin was biased to flip 75% heads), your posterior distribution would be a Beta(33, 17), centered around 0.66. In that case you'd still believe in a heads bias, but less strongly than you did initially. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* As you flip the coin more and more times the prior would matter less and less until eventually you would have about the same posterior distributin no matter which prior you started with."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What's interesting about this is that you can make the statement \"Based on the observed data and the prior, there is only a 5% liklihood the coin's heads probability is between 49% and 51%\". This is philisophically different from a statement like \"if the coin were fair we would expect to observe data so extreme only 5% of the time\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Using Bayesian inference to test hypotheses is somethat controversial**-- in part because its mathematics can get somewhat complicated, and in part because of the subjective nature of choosing a prior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Further reading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Coursera offers a statistical inference course"
    ]
   },
   {
