--- a/Ch8 Gradient Descent.ipynb
+++ b/Ch8 Gradient Descent.ipynb
@@ -117,8 +117,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* For a lot of functions it is pretty simple to calculate the derivative"
+    "* For a lot of functions it is pretty simple to calculate the derivative, such as the square function"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def square(x):\n",
+    "    return x * x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def derivative(x):\n",
+    "    return 2 * x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What if we couldn't find the gradient? You cannot take limits in Python (unless you use SymPy), however we can estimate the derivatives by evaluating the defference quotient for a very small *e*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from functools import partial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "derivative_estimate = partial(difference_quotient, square, h=0.00001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = range(-10, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "x and y must have same first dimension",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-3771b34932bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Actual Derivatives vs. Estimates\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mderivative\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rx'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Actual'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#red x\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mderivative_estimate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'b+'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Estimate'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#blue +\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/vagrant/.pyenv/versions/anaconda3-2.3.0/lib/python3.4/site-packages/matplotlib/pyplot.py\u001b[0m in \u001b[0;36mplot\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m   3097\u001b[0m         \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhold\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhold\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3098\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3099\u001b[1;33m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3100\u001b[0m         \u001b[0mdraw_if_interactive\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3101\u001b[0m     \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/vagrant/.pyenv/versions/anaconda3-2.3.0/lib/python3.4/site-packages/matplotlib/axes/_axes.py\u001b[0m in \u001b[0;36mplot\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1371\u001b[0m         \u001b[0mlines\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1372\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1373\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_lines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1374\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_line\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1375\u001b[0m             \u001b[0mlines\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/vagrant/.pyenv/versions/anaconda3-2.3.0/lib/python3.4/site-packages/matplotlib/axes/_base.py\u001b[0m in \u001b[0;36m_grab_next_args\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    302\u001b[0m                 \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    303\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mremaining\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 304\u001b[1;33m                 \u001b[1;32mfor\u001b[0m \u001b[0mseg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_plot_args\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mremaining\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    305\u001b[0m                     \u001b[1;32myield\u001b[0m \u001b[0mseg\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    306\u001b[0m                 \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/vagrant/.pyenv/versions/anaconda3-2.3.0/lib/python3.4/site-packages/matplotlib/axes/_base.py\u001b[0m in \u001b[0;36m_plot_args\u001b[1;34m(self, tup, kwargs)\u001b[0m\n\u001b[0;32m    280\u001b[0m             \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    281\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 282\u001b[1;33m         \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_xy_from_xy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    283\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    284\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommand\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'plot'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/vagrant/.pyenv/versions/anaconda3-2.3.0/lib/python3.4/site-packages/matplotlib/axes/_base.py\u001b[0m in \u001b[0;36m_xy_from_xy\u001b[1;34m(self, x, y)\u001b[0m\n\u001b[0;32m    221\u001b[0m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matleast_1d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    222\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 223\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"x and y must have same first dimension\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    224\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    225\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"x and y can be no greater than 2-D\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: x and y must have same first dimension"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEKCAYAAADpfBXhAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFdBJREFUeJzt3Xu0ZGV95vHvYzeYYEBwUIwNSBSCQCJqImKi8SguaXEi\nRkcJaLyukWQNzi0qYmZJTzJeWGYSLyQEGUTHCx0xJPY4DIjRo2gQIcNFoJuho2h3gyjXdAzBbvnN\nH3uf7qLoc6rO6XNpXr+ftWpRe++33v3We3Y9+613125SVUiS2vKIpW6AJGn+Ge6S1CDDXZIaZLhL\nUoMMd0lqkOEuSQ0y3LVNklVJPrHI+zwryX9ZoLqvT/IbC1H3w1GSzUkOWup2aHEY7ruQJJNJ7kqy\n+5jlX5/ksnlswrQ3PSSZSPJAHxCbk2xI8pdJfnWndlj1e1X133amjr59H0vyR0N1/1JVfXVn615K\n/fu6f6DfNye5eozXTSZ50+C6qtqzqm5ZgDbO93GoeWC47yL6EdVRwA+Aly5VM0Zs39QHxJ7A0cA6\n4LIkL5jTzhKPv9EKOGOq3/vH08d8nX6K+eHadbwW+CLwCeB1gxuSHJDkwiQ/SHJHkg8neQrwF8Cz\n+9HcXX3ZB43YhkdVST6Y5HtJ7k1yVZLnzKWxVbWpqk4H/gdwxkD9T0lyaZI7k6xL8sqBbR/rp2Eu\nSvJPwPMHR9xJ1iZ5yUD55Ul+mORp/fIFSW5Lck+SryQ5vF//ZuAk4O19X3yuX39LkhckeUKSf06y\nz0DdT+/rXtYvvzHJjf03p4uTHDhQ9k+T3N732XVJjhjujyQnJLlyaN1/GmjLcUluSPKPSTYm+f25\n9PtQ/T+T5JP9MXF3km8meVySdwPPBc7s++NDffkHkjxp4G/x5/3fYnOSy5I8vj8+7u7/Fk8b2Nc7\nkqzv239Dkpf16w8DzuKhx+Ejk/xxku8m+X7/d/+Zftu+ST7f7+fOJF9NMmpgoVky3HcdrwX+EvgM\ncGySxwH04fN54DvAE4EVwPlVtQ44Gbi8H809pq+nmHnU9k3gSGAf4NPABRlzGmgafw08I8nPJnkU\ncCnwSeCxwG8Df94HwJQTgT+qqp8DvjbU3k/326ccC/ygqq7pl/83cHBf9/8FPgVQVR/pn0+NcI/v\ny1e//VbgcuAVA3WfBFxQVT9JcjxwGvBbwL7AZcD5AEmOpQvKQ6rq0cArgTt30A9rgEOTHDy0j0/1\nz88F3lxVewFHAF/aQR3TmS74XgfsBewPPIbueLivqv6gfw//ru+Pfz/N618J/AHde/4x8A3gyr6u\nzwJ/MlB2PfCcvv3/Ffhkkv2qai3wuzz0OHwf3d/qyP6/K4B39dt+H9jQ7/dxwGnlv4My7wz3XUA/\nel4BrKmqm4Eb6YIBuqmanwfeVlX3VdX9VfV3Uy+d7b6q6lNVdXdVPVBVfwI8Ejh0J5p/a9+OvYF/\nDXynqj7e138NcCFdiEz5m6q6vG/L/UPv43zgpVMjPLo+OH+g7R+rqh9V1Ra6gDkyyZ4Ddc/UH9tO\nHP0o8YR+HXTh9N6quqmqHgDeCzytH73/GNgTOCzJI/oy3x+uvKruAz43sI9D6Pp1TV/kx8ARSfaq\nqnurauS8+cB7ems/yp16nDdQ57+iO/FUVV1dVZvH7I8CLuxfcz/dSfpHVfXJPmg/A2yb/qmqz069\n76r6DHAz8Kwd7afv338L/Oequqeq/omuT397oN0/DxxUVT+pqq+P2ReaBcN91/A64AsDH8wL2D41\ncwDw3T50dlqSt/bTD/ckuRt4NN0Iaq5W0AXFPXTfLJ41GER0Ab1fX7boRmw7VFXrgbV0Ab8H8Jv0\nAZxkWZL39VMD99J9k2EWbb+Qburg8cBvAA9U1df6bU8EPjjQ5qmR+ROq6svAmcCfAbcnOXvohDJo\n8JvHScBfV9W/9MuvAI4Dbkk3dXb0mO0u4P1Vtc/A4w39tk8AlwCrk2xKckaS5UOvnckPBp7/y9Dy\nfcDPTS0keW2Sqwf66JfoTiw78lhgD+DvB8r/H7b/rd5P903gC0n+IcmpI9qpOVg+uogWUpKfBV4F\nPCLJbf3qRwJ7J3kqXRgemGRZVf1k6OU7+vD+CHjUwPLjB/b1XOBtwAuq6oZ+3V3M4RvAgN8C/r6q\n7kvyPeArVfWinajvfLqAXAbcWFXf7tefRHeh+Ziq+m6SvYHBts8YZFV1d5Iv0I3YD2fgGwHwPbqp\novOnee2HgQ8neSzdiPZtbJ9iGPRF4LFJjqQbpf7HgTquAl7WT7O9pa/nwB3UMbaq2gr8IfCHSZ4I\nXATcBHyUebyg2tf9EeAFdNMvle4XO9P1/R10J4fDq+q2oW30I/m30n0jOQL4UpIrq2o2U1UawZH7\n0nsZsBU4jG5+8sj++WV08/BXALcB70uyR38R7df6194O7J9kt4H6rgFe3s+BHwy8ie0fvj37fd2R\nZPck76Kbs52VdFYkOb2v/539ps8Dv5jkNUl26x/PTHfxF3Z8Ehlet5purv132T5fDd0o8n7grn5u\n/z1Dr7sdeNKIpn+a7hvRK9g+JQPdhel3ZvsF2kenvxCc5FeTPKvv43+mG+EOn2QB6KeLLgD+mO6a\nxqV9HbsleXWSR/cn6M3T1bEDYZqTb7qfp/5yf8LYDGwZqPd24Mkj6h3Xo+iOoTvoBiFvoBu5T3nQ\ncdh/yzwH+EB/QqQ/Xl7UP39JkoP76Zt/7Ns8bn9oTIb70nst8NGq2lhVP+gft9NNBUzNu/8m3UWp\n79GN5F/Vr/9b4Abg+0mmvlL/Kd2c5u3AeXQXN6dc3D/+H3AL3ejqewPbZ7oYW8ATkmymC5Jv0l0Y\nfF5VfRG2jcheRDdq3UR3UnovsPtAHcP1P2hdP6/7d8Cz6S4wT/mfwHf7eq+nu0A6WNe5wOH9NMCF\n07yHNXT9eFtVfWtgn39D94uf1f2Uz7foTjDQnfw+Qvct4Ra6gHv/NPVDd9I4hu5i7eBU2muA7/T1\nvxl4NUCSA9P9ymT/aeortv8KaOox9bd+PN3J5F666zSTdFM1AB8E/k26X/98YJp6a4blqXVU1Y3A\nf6fr8+/TBfvXBsrt6Dg8lW7q5Rv9e74U+MV+2yH98ma6v/WfVdVXpnn/mqOMukid5KPAS+h+tfDL\n05T5EPBiupHN62dxsUiStADGGbmfB6ycbmOS44CDq+oQuhHJWfPUNknSHI0M96q6DLh7hiIvBT7e\nl72C7kLgfjOUlyQtsPmYc1/Bg3/etpHupgpJ0hKZrwuqw1fevdtMkpbQfPzOfRPdjTZT9u/XPUgS\nA1+S5qCqZn0vynyM3NfQ/ZyP/q67e/qf8j1EVfmo4vTTT1/yNuwqD/vCvrAvZn7M1ciRe5LzgecB\n+ybZAJwOTN2scHZVXZTuX7xbT3d35Bumr02StBhGhntVnThGmVPmpzmSpPngHapLYGJiYqmbsMuw\nL7azL7azL3beyDtU521HSS3WviSpFUmoJbqgKknaxRjuktQgw12SGmS4S1KDDHdJapDhLkkNMtwl\nqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIa\nZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXIcJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGG\nuyQ1yHCXpAYZ7pLUoJHhnmRlknVJbk5y6g6275vk4iTXJLk+yesXpKWSpLGlqqbfmCwDbgJeCGwC\nrgROrKq1A2VWAY+sqtOS7NuX36+qtg7VVTPtS5L0UEmoqsz2daNG7kcB66vqlqraAqwGjh8qcxuw\nV/98L+DO4WCXJC2u5SO2rwA2DCxvBJ41VOYc4EtJbgX2BF41f82TJM3FqHAfZx7lncA1VTWR5MnA\npUmOrKrNwwVXrVq17fnExAQTExOzaKoktW9ycpLJycmdrmfUnPvRwKqqWtkvnwY8UFVnDJS5CHh3\nVX29X/5b4NSqumqoLufcJWmWFmrO/SrgkCQHJdkdOAFYM1RmHd0FV5LsBxwKfHu2DZEkzZ8Zp2Wq\namuSU4BLgGXAuVW1NsnJ/fazgfcA5yW5lu5k8faqumuB2y1JmsGM0zLzuiOnZSRp1hZqWkaS9DBk\nuEtSgwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7\nJDXIcJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtS\ngwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lq0MhwT7IyybokNyc5dZoy\nE0muTnJ9ksl5b6UkaVZSVdNvTJYBNwEvBDYBVwInVtXagTJ7A18Hjq2qjUn2rao7dlBXzbQvSdJD\nJaGqMtvXjRq5HwWsr6pbqmoLsBo4fqjMScBfVdVGgB0FuyRpcY0K9xXAhoHljf26QYcAj0ny5SRX\nJfmd+WygJGn2lo/YPs48ym7AM4BjgD2Ay5N8o6pu3tnGSZLmZlS4bwIOGFg+gG70PmgDcEdV3Qfc\nl+SrwJHAQ8J91apV255PTEwwMTEx+xZLUsMmJyeZnJzc6XpGXVBdTndB9RjgVuCbPPSC6lOAM4Fj\ngUcCVwAnVNWNQ3V5QVWSZmmuF1RnHLlX1dYkpwCXAMuAc6tqbZKT++1nV9W6JBcD1wEPAOcMB7sk\naXHNOHKf1x05cpekWVuon0JKkh6GDHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtS\ngwx3SWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXI\ncJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3\nSWqQ4S5JDTLcJalBI8M9ycok65LcnOTUGco9M8nWJC+f3yZKkmZrxnBPsgw4E1gJHA6cmOSwacqd\nAVwMZAHaKUmahVEj96OA9VV1S1VtAVYDx++g3FuAzwI/nOf2SZLmYFS4rwA2DCxv7Ndtk2QFXeCf\n1a+qeWudJGlORoX7OEH9AeAdVVV0UzJOy0jSEls+Yvsm4ICB5QPoRu+DfgVYnQRgX+DFSbZU1Zrh\nylatWrXt+cTEBBMTE7NvsSQ1bHJyksnJyZ2uJ92Ae5qNyXLgJuAY4Fbgm8CJVbV2mvLnAf+rqi7c\nwbaaaV+SpIdKQlXNekZkxpF7VW1NcgpwCbAMOLeq1iY5ud9+9pxaK0laUDOO3Od1R47cJWnW5jpy\n9w5VSWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXI\ncJekBhnuktQgw12SGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3\nSWqQ4S5JDTLcJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDVorHBP\nsjLJuiQ3Jzl1B9tfneTaJNcl+XqSp85/UyVJ40pVzVwgWQbcBLwQ2ARcCZxYVWsHyjwbuLGq7k2y\nElhVVUcP1VOj9iVJerAkVFVm+7pxRu5HAeur6paq2gKsBo4fLFBVl1fVvf3iFcD+s22IJGn+jBPu\nK4ANA8sb+3XTeRNw0c40SpK0c5aPUWbsuZQkzwfeCPz6jravWrVq2/OJiQkmJibGrVqSfipMTk4y\nOTm50/WMM+d+NN0c+sp++TTggao6Y6jcU4ELgZVVtX4H9TjnLkmztJBz7lcBhyQ5KMnuwAnAmqGd\nH0gX7K/ZUbBLkhbXyGmZqtqa5BTgEmAZcG5VrU1ycr/9bOBdwD7AWUkAtlTVUQvXbEnSTEZOy8zb\njpyWkaRZW8hpGUnSw4zhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLc\nJalBhrskNchwl6QGGe6S1CDDXZIaZLhLUoMMd0lqkOEuSQ0y3CWpQYa7JDXIcJekBhnuktQgw12S\nGmS4S1KDDHdJapDhLkkNMtwlqUGGuyQ1yHCXpAYZ7pLUIMNdkhpkuEtSgwx3SWqQ4S5JDTLcJalB\nI8M9ycok65LcnOTUacp8qN9+bZKnz38zJUmzMWO4J1kGnAmsBA4HTkxy2FCZ44CDq+oQ4M3AWQvU\n1mZMTk4udRN2GfbFdvbFdvbFzhs1cj8KWF9Vt1TVFmA1cPxQmZcCHweoqiuAvZPsN+8tbYgH7nb2\nxXb2xXb2xc4bFe4rgA0Dyxv7daPK7L/zTZMkzdWocK8x68kcXydJWgCpmj6HkxwNrKqqlf3yacAD\nVXXGQJm/ACaranW/vA54XlXdPlSXgS9Jc1BVwwPokZaP2H4VcEiSg4BbgROAE4fKrAFOAVb3J4N7\nhoN9ro2TJM3NjOFeVVuTnAJcAiwDzq2qtUlO7refXVUXJTkuyXrgR8AbFrzVkqQZzTgtI0l6eJr3\nO1S96Wm7UX2R5NV9H1yX5OtJnroU7VwM4xwXfblnJtma5OWL2b7FMubnYyLJ1UmuTzK5yE1cNGN8\nPvZNcnGSa/q+eP0SNHNRJPloktuTfGuGMrPLzaqatwfd1M164CBgN+Aa4LChMscBF/XPnwV8Yz7b\nsKs8xuyLZwOP7p+v/Gnui4FyXwI+D7xiqdu9RMfE3sANwP798r5L3e4l7ItVwHun+gG4E1i+1G1f\noP54LvB04FvTbJ91bs73yN2bnrYb2RdVdXlV3dsvXkG79weMc1wAvAX4LPDDxWzcIhqnH04C/qqq\nNgJU1R2L3MbFMk5f3Abs1T/fC7izqrYuYhsXTVVdBtw9Q5FZ5+Z8h7s3PW03Tl8MehNw0YK2aOmM\n7IskK+g+3FP/fEWLF4PGOSYOAR6T5MtJrkryO4vWusU1Tl+cAxyR5FbgWuA/LFLbdkWzzs1RP4Wc\nLW962m7s95Tk+cAbgV9fuOYsqXH64gPAO6qqkoSHHiMtGKcfdgOeARwD7AFcnuQbVXXzgrZs8Y3T\nF+8ErqmqiSRPBi5NcmRVbV7gtu2qZpWb8x3um4ADBpYPoDvDzFRm/35da8bpC/qLqOcAK6tqpq9l\nD2fj9MWv0N0rAd386ouTbKmqNYvTxEUxTj9sAO6oqvuA+5J8FTgSaC3cx+mLXwPeDVBV/5DkO8Ch\ndPff/LSZdW7O97TMtpuekuxOd9PT8IdzDfBa2HYH7A5vemrAyL5IciBwIfCaqlq/BG1cLCP7oqqe\nVFW/UFW/QDfv/nuNBTuM9/n4HPCcJMuS7EF38ezGRW7nYhinL9YBLwTo55cPBb69qK3cdcw6N+d1\n5F7e9LTNOH0BvAvYBzirH7FuqaqjlqrNC2XMvmjemJ+PdUkuBq4DHgDOqarmwn3MY+I9wHlJrqUb\niL69qu5askYvoCTnA88D9k2yATidbopuzrnpTUyS1CD/N3uS1CDDXZIaZLhLUoMMd0lqkOEuSQ0y\n3CWpQYa7JDXIcJekBv1/CXrkGSYIwgYAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f29ecac3278>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.title(\"Actual Derivatives vs. Estimates\")\n",
+    "plt.plot(x, map(derivative, x), 'rx', label='Actual') #red x\n",
+    "plt.plot(x, map(derivative_estimate, x), 'b+', label='Estimate') #blue +\n",
+    "plt.legend(loc=9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
